--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,10 +4,32 @@
 <head>
   <title>To Do App</title>
 
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
+  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
 
+
+
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+
+
+
+  <!--Bootstrap-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+  <!--Font Families-->
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma|Permanent+Marker&display=swap" rel="stylesheet">
+
+
+   <!-- External Font Awesome icons -->
+   <script src="https://kit.fontawesome.com/7b217e7c39.js" crossorigin="anonymous"></script>
+
+
+   <!-- App JS -->
+   <script type="text/javascript" src="/scripts/login.js"></script>
 
 
   </head>
@@ -73,6 +95,11 @@
     </div>
 
 
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 
 
