--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,7 +29,7 @@
 
 
    <!-- App JS -->
-   <script type="text/javascript" src="/scripts/login.js"></script>
+   <script type="text/javascript" src="/scripts/register.js"></script>
 
 
   </head>
@@ -51,25 +51,29 @@
       </div>
 
 
-      <!--Login-->
+      <!--Register/Signup-->
 
-      <form method="POST" action="/login" id="login">
-        <h2 class="text-center">Login</h2>
-        <p class="text-center">Welcome back!</p>
-        <hr>
-        <div class="form-group">
-          <label>Email Address</label>
-          <input type="email" class="form-control" name="email" placeholder="Enter Email" required="required">
-        </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input type="password" class="form-control" name="password" placeholder="Enter Password" required="required">
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary">Login</button>
-        </div>
-      </form>
-    </div>
+    <form method="POST" action="/register" id="register">
+      <h2 class="text-center">Sign Up!</h2>
+      <p class="text-center">Please fill in this form to create an account!</p>
+      <hr>
+      <div class="form-group">
+        <label>Email Address</label>
+        <input type="email" class="form-control" name="email" placeholder="Enter Email" required="required">
+      </div>
+      <div class="form-group">
+        <label>Name</label>
+        <input type="name" class="form-control" name="name" placeholder="Enter Name" required="required">
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" class="form-control" name="password" placeholder="Enter Password" required="required">
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+      </div>
+    </form>
+  </div>
 
 
 
